--- a/localisation/AUH_l_english.yml
+++ b/localisation/AUH_l_english.yml
@@ -1,16 +1,16 @@
 l_english:
- BOH_fascism:0 "Austrian Imperial Confederation"
- BOH_fascism_DEF:0 "the Austrian Imperial Confederation"
- BOH_democratic:0 "Austro-Hungarian Republic"
- BOH_democratic_DEF:0 "the Austro-Hungarian Republic"
- BOH_neutrality:0 "Austria-Hungary"
- BOH_neutrality_DEF:0 "the Austro-Hungarian Empire"
- BOH_communism:0 "Austro-Hungarian Collective"
- BOH_communism_DEF:0 "the Austro-Hungarian Collective"
- BOH_fascism_ADJ:0 "Austro-Hungarian"
- BOH_democratic_ADJ:0 "Austro-Hungarian"
- BOH_neutrality_ADJ:0 "Austro-Hungarian"
- BOH_communism_ADJ:0 "Austro-Hungarian"
- BOH:0 "Austria-Hungary"
- BOH_DEF:0 "Austria-Hungary"
- BOH_ADJ:0 "Austro-Hungarian"
+ AUH_fascism:0 "Austrian Imperial Confederation"
+ AUH_fascism_DEF:0 "the Austrian Imperial Confederation"
+ AUH_democratic:0 "Austro-Hungarian Republic"
+ AUH_democratic_DEF:0 "the Austro-Hungarian Republic"
+ AUH_neutrality:0 "Austria-Hungary"
+ AUH_neutrality_DEF:0 "the Austro-Hungarian Empire"
+ AUH_communism:0 "Austro-Hungarian Collective"
+ AUH_communism_DEF:0 "the Austro-Hungarian Collective"
+ AUH_fascism_ADJ:0 "Austro-Hungarian"
+ AUH_democratic_ADJ:0 "Austro-Hungarian"
+ AUH_neutrality_ADJ:0 "Austro-Hungarian"
+ AUH_communism_ADJ:0 "Austro-Hungarian"
+ AUH:0 "Austria-Hungary"
+ AUH_DEF:0 "Austria-Hungary"
+ AUH_ADJ:0 "Austro-Hungarian"
