--- a/localisation/AUH_l_english.yml
+++ b/localisation/AUH_l_english.yml
@@ -1,4 +1,4 @@
-l_english:
+﻿l_english:
  AUH_fascism:0 "Austrian Imperial Confederation"
  AUH_fascism_DEF:0 "the Austrian Imperial Confederation"
  AUH_democratic:0 "Austro-Hungarian Republic"
