--- a/localisation/HEC_l_english.yml
+++ b/localisation/HEC_l_english.yml
@@ -1,16 +1,16 @@
 ﻿l_english:
- MOC_fascism:0 "Mosell Reich"
- MOC_fascism_DEF:0 "the Mosell Reich"
- MOC_democratic:0 "Moselland"
- MOC_democratic_DEF:0 "Moselland"
- MOC_neutrality:0 "Duchy of Moselland"
- MOC_neutrality_DEF:0 "The Duchy of Moselland"
- MOC_communism:0 "Moselland Commune"
- MOC_communism_DEF:0 "The Moselland Commune"
- MOC_fascism_ADJ:0 "Mosell"
- MOC_democratic_ADJ:0 "Mosell"
- MOC_neutrality_ADJ:0 "Mosell"
- MOC_communism_ADJ:0 "Mosell"
- MOC:0 "Moselland"
- MOC_DEF:0 "Moselland"
- MOC_ADJ:0 "Mosell"
+ HEC_fascism:0 "Mosell Reich"
+ HEC_fascism_DEF:0 "the Mosell Reich"
+ HEC_democratic:0 "Moselland"
+ HEC_democratic_DEF:0 "Moselland"
+ HEC_neutrality:0 "Duchy of Moselland"
+ HEC_neutrality_DEF:0 "The Duchy of Moselland"
+ HEC_communism:0 "Moselland Commune"
+ HEC_communism_DEF:0 "The Moselland Commune"
+ HEC_fascism_ADJ:0 "Mosell"
+ HEC_democratic_ADJ:0 "Mosell"
+ HEC_neutrality_ADJ:0 "Mosell"
+ HEC_communism_ADJ:0 "Mosell"
+ HEC:0 "Moselland"
+ HEC_DEF:0 "Moselland"
+ HEC_ADJ:0 "Mosell"
