--- a/localisation/TRC_l_english.yml
+++ b/localisation/TRC_l_english.yml
@@ -11,6 +11,6 @@
  TRC_democratic_ADJ:0 "West German"
  TRC_neutrality_ADJ:0 "West German"
  TRC_communism_ADJ:0 "West German"
- TRC:0 "Rhine Confederation"
- TRC_DEF:0 "The Rhine Confederation"
+ TRC:0 "Rhineland"
+ TRC_DEF:0 "Rhineland"
  TRC_ADJ:0 "West German"
