--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -49,7 +49,7 @@
  STATE_48:0 "Sofia"
  STATE_49:0 "Ankara"
  STATE_50:0 "Württemberg"
- STATE_51:0 "Rhineland"
+ STATE_51:1 "Westrhein"
  STATE_52:0 "Oberbayern"
  STATE_53:0 "Niederbayern"
  STATE_54:0 "Franken"
@@ -806,3 +806,4 @@
  STATE_805:0 "Northern Epirus"
  STATE_806:0 "Pyrénées-Atlantiques"
  STATE_807:0 "Limburg"
+ STATE_808:0 "Ostrhein"
