--- a/localisation/parties_l_english.yml
+++ b/localisation/parties_l_english.yml
@@ -684,15 +684,50 @@
  BUL_national_social_movement_party_long:0 "National Social Movement"
  BAV_fascism_party:0 "NSBAP"
  BAV_fascism_party_long:0 "Nationalsozialistische Bayerisch Arbeiterpartei"
- TRC_democratic_party:0 "Zentrum"
- TRC_democratic_party_long:0 "Zentrum"
- BOH_neutrality_party:0 "Hohenzollern"
- BOH_neutrality_party_long:0 "Hohenzollern"
+ BAV_democratic_party:0 "CCUB"
+ BAV_democratic_party_long:0 "Christian Conservative Union of Bavaria"
+ BAV_neutrality_party:0 "Bavarian Council"
+ BAV_neutrality_party_long:0 "Bavarian Council"
+ BAV_communism_party:0 "BWP"
+ BAV_communism_party_long:0 "Bavarian Workers Party"
+ TRC_democratic_party:0 "RCC"
+ TRC_democratic_party_long:0 "Republican-Conservative Coalition"
+ TRC_neutrality_party:0 "The Rheinmarshal's Party"
+ TRC_neutrality_party_long:0 "The Rheinmarshal's Party"
+ TRC_communism_party:0 "RWU"
+ TRC_communism_party_long:0 "Rhine Workers Union"
+ TRC_fascism_party:0 "Rhein Faschistisch Partei"
+ BOH_neutrality_party:0 "House Hohenzollern"
+ BOH_neutrality_party_long:0 "House Hohenzollern"
+ BOH_fascism_party:0 "BNFP"
+ BOH_fascism_party_long:0 "Bohemian National Fascist Party"
+ BOH_democratic_party:0 "BDSP"
+ BOH_democratic_party_long:0 "Bohemian Democratic Socialist Party"
+ BOH_communism_party:0 "MWP"
+ BOH_communism_party_long:0 "Marxist Workers Party"
  NTE_neutrality_party:0 "Military Junta"
  NTE_neutrality_party_long:0 "Mackensen's Military Junta"
+ NTE_democratic_party:0 "NGLP"
+ NTE_democratic_party_long:0 "North German Liberal Party"
+ NTE_fascism_party:0 "North German Military Order"
+ NTE_fascism_party_long:0 "North German Military Order"
+ NTE_communism_party:0 "NEGWP"
+ NTE_communism_party_long:0 "North East German Workers Party"
  HEC_communism_party:0 "CPHE"
  HEC_communist_party_long:0 "Commnist Party of Hessen"
+ HEC_fascism_party:0 "HUF"
+ HEC_fascism_party_long:0 "Hessen Union of Fascists"
+ HEC_democratic_party:0 "HCUP"
+ HEC_democratic_party_long:0 "Hessen Conservative Union Party"
+ HEC_neutrality_party:0 "Military Council of Hessen"
+ HEC_neutrality_party_long:0 "Military Council of Hessen"
  TPR_communist_party:0 "PPP"
  TPR_communist_party_long:0 "Pomeranian People's Party"
+ TPR_fascism_party:0 "BNP"
+ TPR_fascism_party_long:0 "Berlin Nationalist Party"
+ TPR_neutrality_party:0 "Herzogtum Pommern"
+ TPR_neutrality_party_long:0 "Herzogtum Pommern"
+ TPR_democratic_party:0 "BPLP"
+ TPR_democratic_party_long:0 "Brandenburg-Pomeranian Liberal Party"
  PRS_fascism_party:0 "SA"
  PRS_fascism_party_long:0 "Sturmabteilung"
