--- a/localisation/BOH_l_english.yml
+++ b/localisation/BOH_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
- BOH_fascism:0 "Bohemian Empire"
- BOH_fascism_DEF:0 "the Bohemian Empire"
+ BOH_fascism:0 "Holy Roman State"
+ BOH_fascism_DEF:0 "the Holy Roman State"
  BOH_democratic:0 "Bohemia"
  BOH_democratic_DEF:0 "the Bohemian Republic"
  BOH_neutrality:0 "Holy Roman Empire"
