--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -980,3 +980,4 @@ l_english:
  VICTORY_POINTS_7597:0 "Kzyl-Orda"
  VICTORY_POINTS_7341:0 "Aktobe"
  VICTORY_POINTS_1517:0 "Mangystau"
+ VICTORY_POINTS_6914:0 "East Madrid"
