--- a/localisation/parties_l_english.yml
+++ b/localisation/parties_l_english.yml
@@ -697,8 +697,8 @@
  TRC_communism_party:0 "RWU"
  TRC_communism_party_long:0 "Rhine Workers Union"
  TRC_fascism_party:0 "Rhein Faschistisch Partei"
- BOH_neutrality_party:0 "House Hohenzollern"
- BOH_neutrality_party_long:0 "House Hohenzollern"
+ BOH_neutrality_party:0 "House Hapsburg"
+ BOH_neutrality_party_long:0 "House Hapsburg"
  BOH_fascism_party:0 "BNFP"
  BOH_fascism_party_long:0 "Bohemian National Fascist Party"
  BOH_democratic_party:0 "BDSP"
