--- a/localisation/FSP_l_english.yml
+++ b/localisation/FSP_l_english.yml
@@ -1,4 +1,4 @@
-l_english:
+﻿l_english:
  FSP_fascism:0 "North Spain Falangist Union"
  FSP_fascism_DEF:0 "The NSFU"
  FSP_democratic:0 "Northern Spanish Republic"
