HRE Focus&Events update
Still needs work

--- a/localisation/BOH_l_english.yml
+++ b/localisation/BOH_l_english.yml
@@ -9,22 +9,21 @@
  BOH_communism_DEF:0 "the Bohemian Union"
  BOH_marxism_n:0 "Bohemian Union"
  BOH_marxism_n_DEF:0 "the Bohemian Union"
- BOH_marxism_leninism:0 "Bohemian Socialist Republic"
- BOH_marxism_leninism_DEF:0 "the Bohemian Socialist Republic"
- BOH_holy_roman_union:0 "Holy Roman Union"
- BOH_holy_roman_union_DEF:0 "the Holy Roman Union"
+ BOH_marxism_leninism:0 "Holy Roman People's Republic"
+ BOH_marxism_leninism_DEF:0 "the Holy Roman People's Republic"
+ BOH_com_east_germany:0 "East German Workers Union"
+ BOH_com_east_germany_n_DEF:0 "the East German Workers Union"
  BOH_fascism_ADJ:0 "Bohemian"
  BOH_democratic_ADJ:0 "Bohemian"
  BOH_neutrality_ADJ:0 "Bohemian"
  BOH_communism_ADJ:0 "Bohemian"
  BOH_marxism_n_ADJ:0 "Bohemian"
  BOH_marxism_leninism_ADJ:0 "Bohemian"
- BOH_holy_roman_union_ADJ:0 "Holy Roman"
+ BOH_com_east_germany_ADJ:0 "East German"
  BOH:0 "Bohemia"
  BOH_DEF:0 "Bohemia"
  BOH_ADJ:0 "Bohemian"
  BOH_purge_opponents:0 "Purge Opponents"
-form_hre_union:0 "Controls all §YHoly Roman§! core states§!§!."
 BOH_purge_opponents_desc:0 "While we did win the civil war, pro-Kaiser resistance groups still operate within our borders. We must find them and stop them from sabotaging our industries, and stop them from potentially trying to overthrow our government."
 BOH_our_doctrine_is_fine:0 "Our Doctrine Is Fine"
 BOH_our_doctrine_is_fine_desc:0 "Other countries like Bavaria have adopted a motorized approach to warfare, but it is just a fad. It is best to improve on our current doctrine, which is bound to come out on top."
@@ -210,9 +209,6 @@ BOH_integrate_pomerania:0 "Integrate Pomerania"
 BOH_integrate_bavaria:0 "Integrate Bavaria"
 BOH_integrate_pomerania_desc:0 "Now that the Pomeranian civil war is over, we can now fully reintegrate them back into our glorious empire."
 BOH_governmental_reorganization:0 "Governmental Reorganization"
-BOH_proclaim_the_holy_roman_union:0 "Proclaim the Holy Roman Union"
-BOH_proclaim_the_holy_roman_federation:0 "Proclaim the Holy Roman Federation"
-BOH_approach_the_commune_of_baden:0 "Approach the Commune of Baden"
 BOH_governmental_reorganization_desc:0 "It's time to reorganize our government, now that we've recovered. Some members of the party think we should completely reorganize our government, calling for a more militaristic state. On the other hand, many support a continuation of the current Marxist government."
 BOH_air_doctrine_experiments:0 "Air Doctrine Experiments"
 BOH_air_doctrine_experiments_desc:0 ""
@@ -274,27 +270,12 @@ BOH_war_department_plans:0 "War Department Plans"
 BOH_small_arms_production:0 "Small Arms Production"
 BOH_partially_recovered:0 "Partially Recovered"
 BOH_nearly_recovered:0 "Nearly Recovered"
-BOH_fully_recovered:0 "A Socalist Ecocomy"
-BOH_com_reunited:0 "Reunited under Communism"
-BOH_march_to_hamburg:0 "March to Hamburg"
-BOH_deal_with_mackensen:0 "Deal with Mackensen"
-BOH_annex_baden:0 "Annex the Baden Commune"
-BOH_com_italy:0 "Eliminate Fascism in Italy"
-BOH_com_switzerland:0 "Liberate Swiss Workers"
-BOH_com_austria:0 "Demand the Annexation of Austria"
+BOH_fully_recovered:0 "Fully Recovered"
 BOH_reopening_our_economy:0 "Reopening our economy"
-BOH_com_purge:0 "Anti-Communist Crackdown"
-BOH_com_political_reforms:0 "Political Reforms"
-BOH_com_purge:0 "Anti-Communist Crackdown"
-BOH_com_political_reforms_focus:0 "Political Reforms"
-BOH_reopening_our_economy_focus:0 "Reopen our economy"
 bohemian_communist_propaganda:0 "Bohemian Communist Propaganda"
 bohemian_communist_propaganda_desc:0 "The Bohemians are spreading communist propaganda throughout our country!"
 BOH_has_marxism:0 "§!§!Your country's name will change to §YBohemian Union§!."
-BOH_has_marxism_leninism:0 "§!§!Your country's name will change to §YBohemian Republic§!."
-BOH_proclaim_holy_roman_union:0 "§!§!Your country's name will change to §YHoly Roman Union§!."
-BOH_proclaim_holy_roman_federation:0 "§!§!Your country's name will change to §YHoly Roman Federation§!."
-BOH_proclaim_holy_roman_federation2:0 "§!§!§RThis will release each german minor as a puppet!§!"
+BOH_has_marxism_leninism:0 "§!§!Your country's name will change to §YHoly Roman People's Republic§!."
 ohe.1.title:0 "Kaiser Influence"
 ohe.1.desc:0 "The Kaiser is gaining influence in our country! We must put an end to this before it is too late, and his tyranny washes over us like waves again!"
 ohe.1.a:0 "We Must Stop This!"
@@ -392,3 +373,70 @@ ohe.26.title:0 "Austria Denies Annexation"
 ohe.26.desc:0 "The Austrian government has rejected the peaceful annexation into the Holy Roman Empire. What should we do?"
 ohe.26.a:0 "Enforce the annexation."
 ohe.26.b:0 "Back down."
+ohe.27.title:0 "Bohemia proposes 'Greater Workers Union' agreement"
+ohe.27.desc:0 "The union workers in Bohemia have come to our government with a proposition, the 'Greater Workers Union' agreement. The agreement will merge all our existing worker unions into a single entity, controlled by both us and the Bohemians."
+ohe.27.a:0 "Accept the agreement"
+ohe.27.b:0 "This practically gives them our industry. Decline the agreement!"
+ohe.28.title:0 "Baden has agreed!"
+ohe.28.desc:0 "Baden agrees that our nations are stronger united together."
+ohe.28.a:0 "Great!"
+ohe.28.b:0 "Great! (puppet)"
+ohe.29.title:0 "Baden has declined!"
+ohe.29.desc:0 "Shocking news has arrived from Baden. They say they will not surrender their independence."
+ohe.29.a:0 "Mobilize against Baden!"
+ohe.29.b:0 "We accept their decision."
+ohe.30.title:0 "A Socialist Union with Bohemia?"
+ohe.30.desc:0 "The Bohemians have come to us with a proposal of a peaceful union between both of our states."
+ohe.30.a:0 "Our nations will prosper united!"
+ohe.30.b:0 "We will not surrender our independence!"
+ohe.31.title:0 "Pomerania has agreed!"
+ohe.31.desc:0 "Pomerania agrees that a greater union between our countries will lead to better conditions in both our countries."
+ohe.31.a:0 "Let us declare the §YEastern German Workers Union§!!"
+ohe.32.title:0 "Pomerania has declined!"
+ohe.32.desc:0 "Shocking news has arrived from Pomerania. They do not want to form a greater union together."
+ohe.32.a:0 "Mobilize against Pomerania!"
+ohe.32.b:0 "Back down..."
+ohe.33.title:0 "Bohemian Workers Union sends ultimatum"
+ohe.33.desc:0 "The Bohemian Workers Union, the centralized worker unions under the control of the Bohemian government, has sent delegates to us. They have laid out demands, including: better worker conditions, better worker rights, and integration into the Bohemian Workers Union."
+ohe.33.a:0 "We have no choice, accept their demands"
+ohe.33.b:0 "We will not surrender our independence!"
+ohe.34.title:0 "Mackensen has agreed!"
+ohe.34.desc:0 "Mackensen was quite surprised when our delegates laid our demands for integration into our Union; however, he ultimately accepted the deal after countless attempts to negotiate with our delegates."
+ohe.34.a:0 "A wise decision."
+ohe.34.b:0 "A wise decision. (puppet)"
+ohe.35.title:0 "Mackensen Responds"
+ohe.35.desc:0 "Our delegates in Hamburg have returned, bringing with them some rather shocking news. Mackensen was completely shocked and enraged by the ultimatum given to him. He immediately sent our delegates back, declining any proposal of annexation,"
+ohe.35.a:0 "Punish Mackensen!"
+ohe.35.b:0 "Back down..."
+ohe.36.title:0 "Move our capital to Berlin?"
+ohe.36.desc:0 "Berlin is now under our control. Should we move our government capital to Berlin?"
+ohe.36.a:0 "Move to Berlin"
+ohe.36.b:0 "Let's stay in Prague"
+BOH_proclaim_holy_roman_union:0 "§!§!Your country's name will change to §YUnion of Holy Roman Republics§!."
+BOH_proclaim_holy_roman_union2:0 "§!§!You will recieve decisions to integrate §YHoly Roman§! core states§!§!."
+BOH_proclaim_holy_roman_federation:0 "§!§!Your country's name will change to §YHoly Roman Federation§!."
+BOH_proclaim_holy_roman_federation2:0 "§!§RThis focus will release §YHoly Roman§! core states except §YBohemia§!."
+form_hre_union:0 "Controls all §YHoly Roman§! core states§!§!."
+BOH_purge_opponents_desc:0 "While we did win the civil war, pro-Kaiser resistance groups still operate within our borders. We must find them and stop them from sabotaging our industries, and stop them from potentially trying to overthrow our government."
+BOH_our_doctrine_is_fine:0 "Our Doctrine Is Fine"
+BOH_our_doctrine_is_fine_desc:0 "Other countries like Bavaria have adopted a motorized approach to warfare, but it is just a fad. It is best to improve on our current doctrine, which is bound to come out on top."
+BOH_integrate_bavaria:0 "Integrate Bavaria"
+BOH_integrate_pomerania_desc:0 "Now that the Pomeranian civil war is over, we can now fully reintegrate them back into our glorious empire."
+BOH_governmental_reorganization:0 "Governmental Reorganization"
+BOH_proclaim_the_holy_roman_union:0 "Proclaim the Holy Roman Union"
+BOH_proclaim_the_holy_roman_federation:0 "Proclaim the Holy Roman Federation"
+BOH_approach_the_commune_of_baden:0 "Approach the Commune of Baden"
+BOH_governmental_reorganization_desc:0 "It's time to reorganize our government, now that we've recovered. Some members of the party think we should completely reorganize our government, calling for a more militaristic state. On the other hand, many support a continuation of the current Marxist government."
+BOH_air_doctrine_experiments:0 "Air Doctrine Experiments"
+BOH_air_doctrine_experiments_desc:0 ""
+BOH_small_arms_production:0 "Small Arms Production"
+BOH_partially_recovered:0 "Partially Recovered"
+BOH_nearly_recovered:0 "Nearly Recovered"
+BOH_fully_recovered:0 "A Socalist Ecocomy"
+BOH_com_reunited:0 "Reunited under Communism"
+BOH_march_to_hamburg:0 "March to Hamburg"
+BOH_deal_with_mackensen:0 "Deal with Mackensen"
+BOH_annex_baden:0 "Annex the Baden Commune"
+BOH_com_italy:0 "Eliminate Fascism in Italy"
+BOH_com_switzerland:0 "Liberate Swiss Workers"
+BOH_com_austria:0 "Demand the Annexation of Austria"
