--- a/localisation/BOH_l_english.yml
+++ b/localisation/BOH_l_english.yml
@@ -8,6 +8,10 @@
  BOH_communism:0 "Bohemian Union"
  BOH_communism_DEF:0 "the Bohemian Union"
  BOH_marxism_n:0 "Bohemian Union"
+ BOH_holy_roman_union:0 "Union of Holy Roman Republics "
+ BOH_holy_roman_union_DEF:0 "the Union of Holy Roman Republics"
+ BOH_holy_roman_federation:0 "Holy Roman Union"
+ BOH_holy_roman_union_DEF:0 "the Holy Roman Union"
  BOH_marxism_n_DEF:0 "the Bohemian Union"
  BOH_marxism_leninism:0 "Holy Roman People's Republic"
  BOH_marxism_leninism_DEF:0 "the Holy Roman People's Republic"
@@ -20,6 +24,7 @@
  BOH_marxism_n_ADJ:0 "Bohemian"
  BOH_marxism_leninism_ADJ:0 "Bohemian"
  BOH_com_east_germany_ADJ:0 "East German"
+ BOH_holy_roman_union_ADJ:0 "Holy Roman"
  BOH:0 "Bohemia"
  BOH_DEF:0 "Bohemia"
  BOH_ADJ:0 "Bohemian"
@@ -391,7 +396,7 @@ ohe.30.a:0 "Our nations will prosper united!"
 ohe.30.b:0 "We will not surrender our independence!"
 ohe.31.title:0 "Pomerania has agreed!"
 ohe.31.desc:0 "Pomerania agrees that a greater union between our countries will lead to better conditions in both our countries."
-ohe.31.a:0 "Let us declare the §YEastern German Workers Union§!!"
+ohe.31.a:0 "Let us declare the §YEast German Workers Union§!!"
 ohe.32.title:0 "Pomerania has declined!"
 ohe.32.desc:0 "Shocking news has arrived from Pomerania. They do not want to form a greater union together."
 ohe.32.a:0 "Mobilize against Pomerania!"
