HRE communist fixes

--- a/localisation/BOH_l_english.yml
+++ b/localisation/BOH_l_english.yml
@@ -241,7 +241,15 @@ BOH_final_stages_of_reconstruction:0 "Final Stages of Reconstruction"
 BOH_final_stages_of_reconstruction_desc:0 ""
 BOH_end_reconstruction:0 "End Reconstruction"
 BOH_end_reconstruction_desc:0 "After reorganizing and reconstructing our broken economy, we've finally achieved a somewhat stable economy."
-BOH_marxismleninism:0 "Marxism-Leninism"
+BOH_liquidate_the_capitalist_class:0 "Liquidate the Capitalist Class"
+BOH_idea_marxism_leninism:0 "Marxism–Leninism"
+BOH_idea_marxism:0 "Dictatorship"
+BOH_idea_marxism_leninism_industry:0 "Liquidation of the Capitalist Class"
+BOH_idea_marxism_industry:0 "Seize the Means of Production"
+BOH_seize_production_means:0 "Seize the Means of Production"
+BOH_com_political_reforms:0 "Political Reforms"
+BOH_com_purge:0 "Anti-Communist Crackdown"
+BOH_marxismleninism:0 "Marxism–Leninism"
 BOH_marxismleninism_desc:0 ""
 BOH_marxism:0 "Marxism"
 BOH_marxism_desc:0 ""
@@ -281,6 +289,8 @@ bohemian_communist_propaganda:0 "Bohemian Communist Propaganda"
 bohemian_communist_propaganda_desc:0 "The Bohemians are spreading communist propaganda throughout our country!"
 BOH_has_marxism:0 "§!§!Your country's name will change to §YBohemian Union§!."
 BOH_has_marxism_leninism:0 "§!§!Your country's name will change to §YHoly Roman People's Republic§!."
+BOH_com_political_reforms_focus:0 "Political Reforms"
+BOH_reopening_our_economy_focus:0 "Reopen our economy"
 ohe.1.title:0 "Kaiser Influence"
 ohe.1.desc:0 "The Kaiser is gaining influence in our country! We must put an end to this before it is too late, and his tyranny washes over us like waves again!"
 ohe.1.a:0 "We Must Stop This!"
@@ -421,7 +431,7 @@ BOH_proclaim_holy_roman_union:0 "§!§!Your country's name will change to §YUni
 BOH_proclaim_holy_roman_union2:0 "§!§!You will recieve decisions to integrate §YHoly Roman§! core states§!§!."
 BOH_proclaim_holy_roman_federation:0 "§!§!Your country's name will change to §YHoly Roman Federation§!."
 BOH_proclaim_holy_roman_federation2:0 "§!§RThis focus will release §YHoly Roman§! core states except §YBohemia§!."
-form_hre_union:0 "Controls all §YHoly Roman§! core states§!§!."
+form_hre_union:0 "Controls all §YHoly Roman§! core states§!§! except §YSwitzerland§! and §YVenice§!."
 BOH_purge_opponents_desc:0 "While we did win the civil war, pro-Kaiser resistance groups still operate within our borders. We must find them and stop them from sabotaging our industries, and stop them from potentially trying to overthrow our government."
 BOH_our_doctrine_is_fine:0 "Our Doctrine Is Fine"
 BOH_our_doctrine_is_fine_desc:0 "Other countries like Bavaria have adopted a motorized approach to warfare, but it is just a fad. It is best to improve on our current doctrine, which is bound to come out on top."
