--- a/localisation/BOH_l_english.yml
+++ b/localisation/BOH_l_english.yml
@@ -284,6 +284,7 @@ BOH_small_arms_production:0 "Small Arms Production"
 BOH_partially_recovered:0 "Partially Recovered"
 BOH_nearly_recovered:0 "Nearly Recovered"
 BOH_fully_recovered:0 "Fully Recovered"
+BOH_isolation:0 "Recovering from the Civil War"
 BOH_reopening_our_economy:0 "Reopening our economy"
 bohemian_communist_propaganda:0 "Bohemian Communist Propaganda"
 bohemian_communist_propaganda_desc:0 "The Bohemians are spreading communist propaganda throughout our country!"
