--- a/localisation/TPR_l_english.yml
+++ b/localisation/TPR_l_english.yml
@@ -1,16 +1,16 @@
 ﻿l_english:
- TPR_fascism:0 "Pomeranian State"
+ TPR_fascism:0 "Brandenburg-Pomeranian State"
  TPR_fascism_DEF:0 "The Pomeranian State"
- TPR_democratic:0 "Pomerania"
- TPR_democratic_DEF:0 "Pomerania"
- TPR_neutrality:0 "Kingdom of Pomerania"
- TPR_neutrality_DEF:0 "The Kingdom of Pomerania"
- TPR_communism:0 "DPR of Pomerania"
- TPR_communism_DEF:0 "The DPR of Pomerania"
- TPR_fascism_ADJ:0 "Pomeranian State"
- TPR_democratic_ADJ:0 "Pomeranian"
- TPR_neutrality_ADJ:0 "Pomeranian Kingdom"
- TPR_communism_ADJ:0 "Peoples Republic"
- TPR:0 "DPR of Pomerania"
- TPR_DEF:0 "The DPR of Pomerania"
- TPR_ADJ:0 "Peoples Republic"
+ TPR_democratic:0 "Republic of Brandenburg-Pomerania"
+ TPR_democratic_DEF:0 "the Republic of Brandenburg-Pomerania"
+ TPR_neutrality:0 "United Kingdom of Pomerania"
+ TPR_neutrality_DEF:0 "The United Kingdom of Pomerania"
+ TPR_communism:0 "Union of Brandenburg-Pomerania"
+ TPR_communism_DEF:0 "The Union of Brandenburg-Pomerania"
+ TPR:0 "Brandenburg-Pomerania"
+ TPR_DEF:0 "Brandenburg-Pomerania"
+ TPR_ADJ:0 "Brandenburg-Pomeranian"
+ TPR_fascism_ADJ:0 "Brandenburg-Pomeranian State"
+ TPR_democratic_ADJ:0 "Brandenburg-Pomeranian"
+ TPR_neutrality_ADJ:0 "Brandenburg-Pomeranian"
+ TPR_communism_ADJ:0 "Brandenburg-Pomeranian"
