HRE Communist Path Focus&Events

--- a/localisation/BOH_l_english.yml
+++ b/localisation/BOH_l_english.yml
@@ -8,10 +8,11 @@
  BOH_communism:0 "Bohemian Union"
  BOH_communism_DEF:0 "the Bohemian Union"
  BOH_marxism_n:0 "Bohemian Union"
- BOH_holy_roman_union:0 "Union of Holy Roman Republics "
+ BOH_holy_roman_union:0 "Union of Holy Roman Republics"
  BOH_holy_roman_union_DEF:0 "the Union of Holy Roman Republics"
- BOH_holy_roman_federation:0 "Holy Roman Union"
- BOH_holy_roman_union_DEF:0 "the Holy Roman Union"
+ BOH_holy_roman_federation:0 "Holy Roman Federation"
+ BOH_holy_roman_federation_DEF:0 "the Holy Roman Federation"
+ BOH_holy_roman_federation_ADJ:0 "Holy Roman"
  BOH_marxism_n_DEF:0 "the Bohemian Union"
  BOH_marxism_leninism:0 "Holy Roman People's Republic"
  BOH_marxism_leninism_DEF:0 "the Holy Roman People's Republic"
@@ -29,6 +30,30 @@
  BOH_DEF:0 "Bohemia"
  BOH_ADJ:0 "Bohemian"
  BOH_purge_opponents:0 "Purge Opponents"
+ BAV_holy_roman_federation:0 "Bavarian HRR"
+ BAV_holy_roman_federation_DEF:0 "the Holy Roman Republic of Bavaria"
+ BAV_holy_roman_federation_ADJ:0 "Bavarian"
+ BAD_holy_roman_federation:0 "HRR of Baden-Württemberg"
+ BAD_holy_roman_federation_DEF:0 "the Holy Roman Republic of Baden-Württemberg"
+ BAD_holy_roman_federation_ADJ:0 "Badisch-Württembergisch"
+ TRC_holy_roman_federation:0 "Renish HRR"
+ TRC_holy_roman_federation_DEF:0 "the Holy Roman Republic of the Rhine"
+ TRC_holy_roman_federation_ADJ:0 "Bavarian"
+ TRC_holy_roman_federation:0 "Renish HRR"
+ TRC_holy_roman_federation_DEF:0 "the Holy Roman Republic of the Rhine"
+ TRC_holy_roman_federation_ADJ:0 "Bavarian"
+ NTE_holy_roman_federation:0 "North German HRR"
+ NTE_holy_roman_federation_DEF:0 "the Holy Roman Republic of the North Germany"
+ NTE_holy_roman_federation_ADJ:0 "North German"
+ TPR_holy_roman_federation:0 "Brandenburg-Pomeranian HRR"
+ TPR_holy_roman_federation_DEF:0 "the Holy Roman Republic of the Brandenburg-Pomerania"
+ TPR_holy_roman_federation_ADJ:0 "Brandenburg-Pomeranian"
+ PRS_holy_roman_federation:0 "Prussian HRR"
+ PRS_holy_roman_federation_DEF:0 "the Holy Roman Republic of the Prussia"
+ PRS_holy_roman_federation_ADJ:0 "Prussian"
+ AUS_holy_roman_federation:0 "Austrian HRR"
+ AUS_holy_roman_federation_DEF:0 "the Holy Roman Republic of the Austria"
+ AUS_holy_roman_federation_ADJ:0 "Austrian"
 BOH_purge_opponents_desc:0 "While we did win the civil war, pro-Kaiser resistance groups still operate within our borders. We must find them and stop them from sabotaging our industries, and stop them from potentially trying to overthrow our government."
 BOH_our_doctrine_is_fine:0 "Our Doctrine Is Fine"
 BOH_our_doctrine_is_fine_desc:0 "Other countries like Bavaria have adopted a motorized approach to warfare, but it is just a fad. It is best to improve on our current doctrine, which is bound to come out on top."
@@ -428,6 +453,17 @@ ohe.36.title:0 "Move our capital to Berlin?"
 ohe.36.desc:0 "Berlin is now under our control. Should we move our government capital to Berlin?"
 ohe.36.a:0 "Move to Berlin"
 ohe.36.b:0 "Let's stay in Prague"
+ohe.37.title:0 "Status of our new territories"
+ohe.37.desc:0 "We've finally reunited with our old territories. However, the previous system was drastically different than our new communist system. We need to decide how we will manage the new territories."
+ohe.37.a:0 "Proclaim the §YUnion of Holy Roman Republics§!"
+ohe.37.b:0 "Proclaim the §YHoly Roman Federation§R (Releases puppets)"
+ohe.38.title:0 "Moving our Capital"
+ohe.38.desc:0 "Now that we've conquered our old territories, should we move our capital?"
+ohe.38.a:0 "Prague"
+ohe.38.b:0 "Berlin"
+ohe.38.c:0 "Hamburg"
+ohe.38.d:0 "Munich"
+ohe.38.e:0 "Vienna"
 BOH_proclaim_holy_roman_union:0 "§!§!Your country's name will change to §YUnion of Holy Roman Republics§!."
 BOH_proclaim_holy_roman_union2:0 "§!§!You will recieve decisions to integrate §YHoly Roman§! core states§!§!."
 BOH_proclaim_holy_roman_federation:0 "§!§!Your country's name will change to §YHoly Roman Federation§!."
