Updates to communist HRE

--- a/localisation/BOH_l_english.yml
+++ b/localisation/BOH_l_english.yml
@@ -464,11 +464,21 @@ ohe.38.b:0 "Berlin"
 ohe.38.c:0 "Hamburg"
 ohe.38.d:0 "Munich"
 ohe.38.e:0 "Vienna"
+ohe.39.title:0 "Reassessing our Foreign Policy"
+ohe.39.desc:0 "Our glorious victory over the false warlord states makes us a major power. What we will do next may lead to wars never seen before."
+ohe.39.a:0 "Onward!"
+ohe.40.title:0 "Reassessing our Domestic Policy"
+ohe.40.desc:0 "By focusing on our domestic policy, we can make our people happier. Building schools, improving healthcare, and improving worker conditions are some of the things we could do."
+ohe.40.a:0 "Me must ensure our people are happy."
+ohe.41.title:0 "Worker Strikes"
+ohe.41.desc:0 "Reports of widespread strikes struck the news today. It appears they're demanding an improvement in worker conditions and rights; and, some are even protesting our government, calling for a more socialist government."
+ohe.41.a:0 "This will blow over."
+ohe.41.b:0 "Crackdown on strikes."
 BOH_proclaim_holy_roman_union:0 "§!§!Your country's name will change to §YUnion of Holy Roman Republics§!."
 BOH_proclaim_holy_roman_union2:0 "§!§!You will recieve decisions to integrate §YHoly Roman§! core states§!§!."
 BOH_proclaim_holy_roman_federation:0 "§!§!Your country's name will change to §YHoly Roman Federation§!."
-BOH_proclaim_holy_roman_federation2:0 "§!§RThis focus will release §YHoly Roman§! core states except §YBohemia§!."
-form_hre_union:0 "Controls all §YHoly Roman§! core states§!§! except §YSwitzerland§! and §YVenice§!."
+BOH_proclaim_holy_roman_federation2:0 "§!§RThis focus will release §YHoly Roman§! core states except §YBohemia§!§!§!."
+form_hre_union:0 "Controls all §YHoly Roman§! claimed states§!§!§!§!."
 BOH_purge_opponents_desc:0 "While we did win the civil war, pro-Kaiser resistance groups still operate within our borders. We must find them and stop them from sabotaging our industries, and stop them from potentially trying to overthrow our government."
 BOH_our_doctrine_is_fine:0 "Our Doctrine Is Fine"
 BOH_our_doctrine_is_fine_desc:0 "Other countries like Bavaria have adopted a motorized approach to warfare, but it is just a fad. It is best to improve on our current doctrine, which is bound to come out on top."
@@ -492,3 +502,17 @@ BOH_annex_baden:0 "Annex the Baden Commune"
 BOH_com_italy:0 "Eliminate Fascism in Italy"
 BOH_com_switzerland:0 "Liberate Swiss Workers"
 BOH_com_austria:0 "Demand the Annexation of Austria"
+BOH_com_foreign_policy:0 "Focus on our Foreign Policy"
+BOH_com_internal_policy:0 "Focus on our Domestic Policy"
+BOH_reorganize_labor_plans:0 "Reorganize Labor Plans"
+BOH_improve_education:0 "Improve our School System"
+BOH_promote_communinism_in_france:0 "Promote Communism in France"
+BOH_worker_strikes_idea:0 "Worker Strikes"
+BOH_com_retake_alsace:0 "Retake Alsace"
+BOH_aid_french_workers:0 "Sympathize with French Workers"
+BOH_idea_reorganized_labor:0 "Reorganized Labor"
+BOH_idea_socialist_education:0 "Socialist Education System"
+BOH_idea_healthcare:0 "Socialist Healthcare System"
+BOH_com_healthcare:0 "Improve Healthcare Standards"
+BOH_com_take_russia:0 "Install a Pro-Soviet Government in Russia"
+BOH_revitalize_soviet_sentiments:0 "Rekindle Soviet Sentiments"
