Demand Rhineland Event&Focus

--- a/localisation/BOH_l_english.yml
+++ b/localisation/BOH_l_english.yml
@@ -284,6 +284,8 @@ BOH_the_bavarian_issue:0 "The Bavarian Issue"
 BOH_the_bavarian_issue_desc:0 ""
 BOH_destroy_the_bavarians:0 "Destroy the Bavarians"
 BOH_destroy_the_bavarians_desc:0 ""
+BOH_demand_the_rhine:0 "Demand the Rhineland"
+BOH_demand_the_rhine_desc:0 ""
 BOH_correct_the_pomeranians:0 "Correct the Pomeranians"
 BOH_correct_the_pomeranians_desc:0 "The Pomeranian government has failed to realize the true goal of communism. We must correct their views before they get too out of hand"
 BOH_the_kaiser:0 "The Kaiser"
@@ -304,6 +306,8 @@ BOH_modern_military:0 "Modern Military"
 BOH_modern_navy:0 "Modern Navy"
 BOH_modern_airforce:0 "Modern Airforce"
 BOH_fort_effort:0 "Fort Effort"
+BOH_united_union_idea:0 "United Union"
+BOH_united_federation_idea:0 "United Federation"
 BOH_war_department_plans:0 "War Department Plans"
 BOH_small_arms_production:0 "Small Arms Production"
 BOH_partially_recovered:0 "Partially Recovered"
