Fixed some focuses

--- a/localisation/BOH_l_english.yml
+++ b/localisation/BOH_l_english.yml
@@ -314,7 +314,10 @@ BOH_partially_recovered:0 "Partially Recovered"
 BOH_nearly_recovered:0 "Nearly Recovered"
 BOH_fully_recovered:0 "Fully Recovered"
 BOH_isolation:0 "Recovering from the Civil War"
+BOH_collapsed_economy:0 "Collapsed Economy"
+BOH_idea_immigration:0 "Encouraged Immigration"
 BOH_reopening_our_economy:0 "Reopening our economy"
+BOH_demand_prussia:0 "The Prussian Expedition"
 bohemian_communist_propaganda:0 "Bohemian Communist Propaganda"
 bohemian_communist_propaganda_desc:0 "The Bohemians are spreading communist propaganda throughout our country!"
 BOH_has_marxism:0 "§!§!Your country's name will change to §YBohemian Union§!."
